add customer authentication